--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -53,6 +53,14 @@
             </h6>
         </a>
     </div>
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:financial_years'  %}">
+            <img src="{% static 'accounting/img/invoice.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+            سال های مالی    
+            </h6>
+        </a>
+    </div>
 
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:invoices'  %}">
