--- a/accounting/templates/accounting/product.html
+++ b/accounting/templates/accounting/product.html
@@ -1,6 +1,6 @@
 {% extends "accounting/layout.html" %} {% block content %}
 <div class="row rtl farsi">
-   
+
   <div class="col-md-12">
     {% include "accounting/includes/product-app/card.html" %}
   </div>
@@ -26,11 +26,16 @@
   <div class="col-md-4">
     {% include "accounting/includes/add-product-to-category-app/template.html" %}
   </div>
-  <div class="col-md-12"></div>
+  <div class="col-md-12">
+    {% include "accounting/includes/product-specifications-app/template.html" %}
+
+  </div>
+
 </div>
-{% endblock content %} 
-{% block script %} 
+{% endblock content %}
+{% block script %}
 {% include "accounting/includes/product-app/script.html" %}
-{% include "accounting/includes/add-product-to-category-app/script.html" %} 
+{% include "accounting/includes/add-product-to-category-app/script.html" %}
+    {% include "accounting/includes/product-specifications-app/script.html" %}
 {% include "accounting/includes/invoice-line-item-units-app/script.html" %}
 {% endblock script %}
