--- a/organization/templates/organization/index.html
+++ b/organization/templates/organization/index.html
@@ -14,6 +14,21 @@
       <h6 class="text-center">سازمان ها</h6>
     </a>
   </div>
+
+
+  
+  <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+    <a href="{% url 'organization:employees' %}">
+      <img
+        src="{% static 'chef/img/logo.png' %}"
+        width="64em"
+        class="mb-2"
+        alt=""
+      />
+      <h6 class="text-center">کارکنان</h6>
+    </a>
+  </div>
+
    
 </div>
 {% endblock content %}
