--- a/organization/templates/organization/organization-unit.html
+++ b/organization/templates/organization/organization-unit.html
@@ -5,32 +5,20 @@
 <div class="row rtl farsi">
     <div class="col-md-12">
       <div class="text-center">
-
-        <a href="{% url 'organization:invoice' pk=meal.id %}">فاکتور</a>
+ 
       </div>
     </div>
    <div class="col-md-4">
-        {% include "organization/includes/invoice-app/card.html" %}
+       
    </div>
-
-  
   <div class="col-12">
-    {% include "chef/includes/add-meal-item-app/template.html" %}
-  </div>
-
-  
-
-  <div class="col-12">
-    {% include "chef/includes/meal-items-app/template.html" %}
+    {% include "organization/includes/employees-app/template.html" %}
   </div>
 </div>
 {% endblock content %} 
 {% block script %} 
 <script>
-    let meal_id=parseInt("{{meal.id}}")
-</script>
-{% include "chef/includes/add-meal-item-app/script.html" %}
-  
-
-{% include "chef/includes/meal-items-app/script.html" %} 
+    let organization_unit_id=parseInt("{{organization_unit.id}}")
+</script> 
+{% include "organization/includes/employees-app/script.html" %} 
 {% endblock script %}
